--- a/src/resources/sass/_settings-slick-carousel.scss
+++ b/src/resources/sass/_settings-slick-carousel.scss
@@ -2,3 +2,35 @@ $slick-loader-path: "../slick-carousel/";
 $slick-font-path: "../slick-carousel/fonts/";
 @import "~slick-carousel/slick/slick.scss";
 @import "~slick-carousel/slick/slick-theme.scss";
+
+@mixin controls-edges() {
+    & .slick-prev, .slick-next{
+        height: 2.5rem;
+        width: 2.5rem;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.8);
+        z-index: 100;
+
+        &:before{
+            font-size: 2rem;
+            color: $black;
+        }
+    }
+    & .slick-prev{
+        left: -2rem;
+        &::before {
+            content: '\f053';
+            font-family: 'Font Awesome 5 Free';
+            font-weight: 900;
+        }
+    }
+    & .slick-next{
+        right: -2rem;
+        &::before {
+            content: '\f054';
+            font-family: 'Font Awesome 5 Free';
+            font-weight: 900;
+        }
+    }
+}
+
