--- a/src/resources/sass/_slider-certificates.scss
+++ b/src/resources/sass/_slider-certificates.scss
@@ -11,5 +11,5 @@
         margin-bottom: 0;
     }
 
-    @include controls-edges();
+    @include controls-edges(2.5rem, 50%, -2rem, unset, -2rem, '\f054', '\f053');
 }
