--- a/src/resources/sass/_slider-certificates.scss
+++ b/src/resources/sass/_slider-certificates.scss
@@ -1,10 +1,11 @@
 .slider-certificates{
-    &__slide{
-        height: 20rem;
-    }
 
     & .slick-slide img{
         width: 100%;
+    }
+
+    &__inline{
+        line-height: 1;
     }
 
     & .figure{
